--- a/.github/workflows/CI-workflow.yml
+++ b/.github/workflows/CI-workflow.yml
@@ -1,26 +1,12 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: CI Workflow
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -32,3 +18,17 @@ jobs:
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
           arguments: build
+  #  Explore-GitHub-Actions:
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+  #      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+  #      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+  #      - name: Check out repository code
+  #        uses: actions/checkout@v3
+  #      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+  #      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+  #      - name: List files in the repository
+  #        run: |
+  #          ls ${{ github.workspace }}
+  #      - run: echo "🍏 This job's status is ${{ job.status }}."
