CI workflow settings

--- a/.github/workflows/CI-workflow.yml
+++ b/.github/workflows/CI-workflow.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x test
   #  Explore-GitHub-Actions:
   #    runs-on: ubuntu-latest
   #    steps:
