--- a/.github/workflows/cloudrun-workflow.yml
+++ b/.github/workflows/cloudrun-workflow.yml
@@ -65,7 +65,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
 
       - name: Google Auth
         id: auth
