--- a/.github/workflows/cloudrun-workflow.yml
+++ b/.github/workflows/cloudrun-workflow.yml
@@ -54,6 +54,7 @@ env:
   GAR_LOCATION: asia-northeast1 # TODO: update Artifact Registry location
   SERVICE: card-service-cloudrun # TODO: update Cloud Run service name
   REGION: asia-northeast1 # TODO: update Cloud Run service region
+  REPOSITORY: card-service-repository
 
 jobs:
   deploy:
@@ -105,8 +106,8 @@ jobs:
 
       - name: Build and Push Container
         run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
 
       # END - Docker auth and build
 
